/*
Home Page displaying the Concordia Waze logo, app name, tagline, and two buttons: 
    "Sign Up / Log in" navigates users to log in page 
    "Use without account" offers guest access (not available yet)
*/

import { Redirect, useRouter } from "expo-router";
import { useEffect, useState } from "react";
import {
  ActivityIndicator,
...
