...
            )}
          </TouchableOpacity>

          <TouchableOpacity
            onPress={props.onClose}
            style={BottomSheetStyles.closeIcon}
            testID="indoor-room-close-button"
          >
            <View testID="close-icon">
              <CloseIcon size={28} />
            </View>
          </TouchableOpacity>
        </View>
...
